Add uncompressed source to project page.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title> HTML5 Patterns </title>
+    <title> CSS Language in its entirety</title>
     <meta name="author" content="mrmrs">
     <meta name="description" content="Common HTML5 patterns I use.">
 
